# Imageboard

./: Cargo.toml  boards.json
scripts/: post.json  test_new_post.sh  test_new_thread.sh  thread.json
src/: api.rs  data.rs  main.rs
static/: index.css  index.html  index.js  thread.css  thread.html
